@@ -16,19 +16,8 @@
  *	51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
-#include <sandix/sched.h>
-#include <sandix/types.h>
-#include <sandix/kernel.h>
-#include <sandix/kdebug.h>
-#include <sandix/ptrace.h>
-#include <sandix/thread_info.h>
-
 #include <asm/processor.h>
 
-__visible void do_syscall_32_irqs_on(struct pt_regs *regs)
-{
-	//struct thread_info *ti = pt_regs_to_thread_info(regs);
+struct cpu_dev intel_cpu_dev = {
 
-	printk("SYSCALL baby...\n");
-	show_regs(regs);
-}
+};
