@@ -543,6 +543,8 @@ Mon Feb 22 11:04:52 CST 2016
 
 
 Tue Feb 23 12:48:24 CST 2016
+- [+] arch/x86/kernel/cpu.c			[D] vendor-specific things
+- [+] arch/x86/kernel/cpu_intel.c
 - [+] kernel/resource.c
 - [M] arch/x86/kernel/setup.c
 - [M] include/sandix/bug.h			[D] BUILD_BUG_ON
